# warriorlords

./: CMakeLists.txt  Makefile  Warlords-Linux.sln  Warlords.cproj  Warlords.sln  Warlords.vcproj  ui cheat sheet.txt
Assets/: 64X64boat.psd  Anubis.psd  Battle menu bow.psd  Battle menu sword.psd  BattleIcons.psd  BattleLayout.psd  Battlehuman castle WIP.psd  Blind Guardian.psd  Colossus.psd  Colossusbunny.psd  Dragon Whelp.psd  Elf Faun Prince.psd  Elf Queen new.psd  Eygpt Scorpion.psd  Eygption Flag.psd  Eygption Priest.psd  Eygption Pyrimid new.psd  Eygption chariot.psd  Faun.psd  Faun2.psd  Font boot.psd  Font bow.psd  Font sword.psd  Font wings.psd  Goblin Batteringram new.psd  Goblin Batteringram.psd  Goblin Flag.psd  Goblin King.psd  Goblin workshop.psd  Human Cleric.psd  Human King Coloured.psd  Human King.psd  Human Paladin.psd  Human Queen Mounted.psd  Human Queen.psd  Humanknight.psd  Ice transfere.psd  Icons.psd  Iron Maiden.psd  Iron Maiden2.psd  (+123 more)
Assets/Castles/: Castle-Elves.psd  Castle-Humans.psd  Castle-Undead.psd
Assets/Font/: FranklinGothic.bmfc
Assets/Maps/: Example.tmx  Template.tmx
Data/: Castles.ini  DefaultMap.ini  Items.ini  Map-Elves.ini  Map-Humans.ini  Map-Pirates.ini  Map-Undead.ini  Map.ini  Map_50x30x2.ini  Map_50x50x2.ini  Map_60x60x3 - Copy.ini  Map_60x60x3.ini  Map_60x60x4.ini  Map_75x75x4.ini  Map_Illuria.ini  Materials.ini  TestBattle.ini  TileSet.ini  Units.ini  dTiles.tsx
Data/Battle_480x320/: backgrounds.txt
Data/Castles/: Castle-Mercenaries.psd  Castle-Pirates.psd
Data/Font/: ArialBlack.fnt  ArialBlack_00.tga  Battle.fnt  Charlemagne.fnt  FranklinGothic.fnt  Georgia.fnt  Georgia_00.tga  Priest.fnt  SmallNumbers.fnt  Squealer.fnt
Data/UI/: create.ini  game-castle.xml  game-group.xml  game-inventory.xml  game-map.xml  game-minimap.xml  game-recruit.xml  game.xml  home.ini  join.ini  lobby.ini  login.ini  menu-background.xml  menu-gamelist.xml  menu-lobby-row.xml  menu-lobby.xml  menu-login.xml  menu-main.xml  menu-playgame.xml  menu.xml  play.ini  requestbox.xml  resume.ini  root.ini  titlescreen.ini
Project/: premake4.lua
Res/: MainWindow.xib
Source/: Action.cpp  Action.h  Button.cpp  Button.h  Castle.cpp  Castle.h  Display.cpp  Display.h  EditableMap.cpp  EditableMap.h  Editor.cpp  Editor.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameState.cpp  GameState.h  Group.cpp  Group.h  HTTP.cpp  HTTP.h  InputHandler.cpp  InputHandler.h  ListBox.cpp  ListBox.h  Lobby.cpp  Lobby.h  Map.cpp  Map.h  MapTemplate.cpp  MapTemplate.h  MapView.cpp  MapView.h  Path.cpp  Path.h  Profile.cpp  Profile.h  Screen.cpp  Screen.h  (+19 more)
Source/Menu/: Menu.cpp  Menu.h
Source/Middleware/: FastDelegate.h
Source/Screens/: Battle.cpp  Battle.h  CastleConfig.cpp  CastleConfig.h  GroupConfig.cpp  GroupConfig.h  HomeScreen.h  (+21 more)
Warlords.xcodeproj/: manu.mode1v3  manu.pbxuser  project.pbxproj
WarriorLordsServ/: .classpath  .project
wlserv/: package.json
(+67 files in other folders)
